# apps/api/internal/models/user.go
@@ -8,7 +8,6 @@ type User struct {
 	ID           string    `db:"id"            fieldtag:"pk" json:"id"`
 	Email        string    `db:"email"                       json:"email"`
 	PasswordHash string    `db:"password_hash"               json:"-"`
-	FolderId     *string   `db:"folder_id"                   json:"folderId"`
 	CreatedAt    time.Time `db:"created_at"                  json:"createdAt"`
 	UpdatedAt    time.Time `db:"updated_at"                  json:"updatedAt"`
 }
